# libgsasl

./: CMakeLists.txt
digest-md5/: client.c  session.c  session.h
gl/: base64.c  base64.h  c-ctype.h  float.c
gssapi/: client.c  server.c
linux_x86_64/include/: alloca.h  config.h  config.h.in
scram/: mechinfo.c
src/: error.c  init.c  internal.h
